--- a/views/trade.ejs
+++ b/views/trade.ejs
@@ -45,7 +45,7 @@
                 
           <input type="hidden" name="aktieTickerValgt" id="aktieTickerValgt"/>
           <input type="hidden" name="totalPris" id="totalPrisInput"/>
-          <button id="BuyStockButton_id" onclick="købAktie_tjekForhold()">Purchase</button>
+          <button id="BuyStockButton_id" onclick="købAktie_tjekForhold()" style="border-radius: 0px;">Purchase</button>
           <button id="SellStockButton_id" onclick="sælgAktie_tjekForhold()">Sell</button>
         
         </div>
