--- a/views/portfoliotransactions.ejs
+++ b/views/portfoliotransactions.ejs
@@ -21,6 +21,7 @@
                 <th>Antal købt</th>
                 <th>Antal solgt</th>
                 <th>Type</th>
+                <th>Gebyr</th>
             </tr>
         </thead>
         <tbody>
@@ -40,6 +41,7 @@
                 <td><%= t.bought %></td>
                 <td><%= t.sold %></td>
                 <td><%= t.getType() %></td>
+                <td>0 DKK</td>
               </tr>
             <% } %>
           <% } %>
